--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Best Design For Education</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                      <h2>Saklani Institute Of Hotel Management</h2>
+                      <p>Best Hotel Management Institute In Dehradun.</p>
                       <a class="slide-btn smoth-scroll" href="#contactus">contact</a></div>
                   </div>
                 </div>
