--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
 <!-- Pre Loader -->
 <div id="loader"></div>
 <!-- Header -->
+
 <header id="home" class="welcome-hero-area">
   <div class="header-top-area">
+    <div class="container topper">
+      <div class="row">
+        <div class="col-md-12">
+          <marquee
+          style="border:#fff 2px SOLID">
+          <b>ADMISSIONS OPEN. CALL NOW! - 9897154715, 7906733592</b>
+          </marquee>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-3"> 
@@ -106,8 +117,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Best Design For Education</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                      <h2>Saklani Institute Of Hotel Management</h2>
+                      <p>Top Institute of Hotel Management in Uttrakhand.</p>
                       <a class="slide-btn smoth-scroll" href="#contactus">contact</a></div>
                   </div>
                 </div>
@@ -124,8 +135,8 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12">
-                      <h2>Best Design For Education</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                      <h2>Saklani Institute Of Hotel Management</h2>
+                      <p>Hotel Management Course in Dehradun.</p>
                       <a class="slide-btn smoth-scroll" href="#contactus">contact</a></div>
                   </div>
                 </div>
@@ -637,26 +648,27 @@
     <div class="row">
       <div class="section-title">
         <h2>Contact <span>Us</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <span>nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span></p>
+        <p>Start your career in hospitality. Admissions Open!</span></p>
         <span class="line"></span> </div>
       <div class="col-md-8 col-md-offset-2 col-sm-12">
         <div class="contact-info">
           <div class="col-md-4 col-sm-4">
             <div class="single-contact"> <i class="lnr lnr-smartphone"></i>
               <h4>Phone</h4>
-              <p>000-111-333333</p>
+              <p>+91 - 7906733592</p>
+              <p>+91 - 9897154715</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="single-contact"> <i class="lnr lnr-map-marker"></i>
               <h4>Address</h4>
-              <p>255, Williams Lane USA</p>
+              <p>174, Ambedkar Marg, D.L. Road, Dehradun, Uttarakhand - 248001</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
-            <div class="single-contact"> <i class="lnr lnr-thumbs-up"></i>
+            <div class="single-contact"> <i class="lnr lnr-envelope"></i>
               <h4>Email</h4>
-              <p>info@sbtechnosoft.com</p>
+              <p>vikashsaklani@gmail.com</p>
             </div>
           </div>
         </div>
@@ -687,7 +699,7 @@
   </div>
   <!-- Google Map Start -->
   <div class="google-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d198710.35112897935!2d-98.51489117772236!3d38.904562823631146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited+States!5e0!3m2!1sen!2sin!4v1471865832140" allowfullscreen></iframe>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.572602452604!2d78.06024821496537!3d30.33467258177769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390929cd770304f5%3A0xf3ea9a1710729f20!2sDL%20Rd%2C%20Chironwali%2C%20Dehradun%2C%20Uttarakhand%20248001!5e0!3m2!1sen!2sin!4v1634645254222!5m2!1sen!2sin" allowfullscreen></iframe>
   </div>
   <!-- Google Map end --> 
 </section>
@@ -698,7 +710,7 @@
     <p>&copy; Copyright <script type="text/javascript">
 var d=new Date();
 document.write(d.getFullYear());
-</script> Study | All Rights Reserved.</p>
+</script> SIHM | All Rights Reserved.</p>
   </div>
 </footer>
 <!-- Copy Rights End --> 
