--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
 <header id="home" class="welcome-hero-area">
   <div class="header-top-area">
-    <div class="container topper">
+    <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 topper">
           <marquee
-          style="border:#fff 2px SOLID">
+          style="border-top:#f7bb00 2px SOLID, border-bottom:#f7bb00 2px SOLID">
           <b>ADMISSIONS OPEN. CALL NOW! - 9897154715, 7906733592</b>
           </marquee>
         </div>
@@ -68,10 +68,10 @@
               <ul class="nav navbar-nav">
                 <li><a class="smoth-scroll" href="#home">Home</a></li>
                 <li><a class="smoth-scroll" href="#aboutus">About Us</a></li>
-                <li><a class="smoth-scroll" href="#services">Services</a></li>
-                <li><a class="smoth-scroll" href="#ourteam">Our Team</a></li>
-                <li><a class="smoth-scroll" href="#testimonial">Testimonials</a></li>
-                <li><a class="smoth-scroll" href="#portfolio">Portfolio</a></li>
+                <li><a class="smoth-scroll" href="#services">Programs</a></li>
+                <!-- <li><a class="smoth-scroll" href="#ourteam">Our Team</a></li> -->
+                <!-- <li><a class="smoth-scroll" href="#testimonial">Testimonials</a></li> -->
+                <li><a class="smoth-scroll" href="#portfolio">Galary</a></li>
                 <li><a class="smoth-scroll" href="#contactus">Contact Us</a></li>
               </ul>
             </div>
@@ -159,8 +159,8 @@
           <div class="message-description">
             <div class="row">
               <div class="col-sm-9">
-                <h2>Scholarship Facility</h2>
-                <p>Lorem ipsum dolor consecteturs adipiscing elit.</p>
+                <h2>Hostel Facility</h2>
+                <p>We also provide hostel facility.</p>
               </div>
               <div class="col-sm-3"> <i class="fa fa-graduation-cap" aria-hidden="true"></i> </div>
             </div>
@@ -170,8 +170,8 @@
           <div class="message-description">
             <div class="row">
               <div class="col-sm-9">
-                <h2>Online Courses</h2>
-                <p>Lorem ipsum dolor consecteturs adipiscing elit.</p>
+                <h2>Innovative Programs</h2>
+                <p>1 year advanced diploma course.</p>
               </div>
               <div class="col-sm-3"> <i class="fa fa-user" aria-hidden="true"></i> </div>
             </div>
@@ -181,8 +181,8 @@
           <div class="message-description">
             <div class="row">
               <div class="col-sm-9">
-                <h2>Book Library</h2>
-                <p>Lorem ipsum dolor consecteturs adipiscing elit.</p>
+                <h2>Training and Placement</h2>
+                <p>Will be held in 5 Star Hotels.</p>
               </div>
               <div class="col-sm-3"> <i class="fa fa-book" aria-hidden="true"></i> </div>
             </div>
@@ -197,29 +197,23 @@
   <div class="container">
     <div class="section-title">
       <h2>About Us</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <span>nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span></p>
+      <p>Saklani Insititute of Hotel Management will provide you with the knowledge and skills you need to thrive in a growth industry of Hospitality Management.</span></p>
       <span class="line"></span> </div>
     <div class="row">
       <div class="about-box">
         <div class="col-md-7 col-sm-12">
-          <h3>Welcome to Our Website</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam ut laoreet. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam ut laoreet. </p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam ut laoreet. </p>
+          <h3>Welcome to SIHM</h3>
+          <p>One of the best hotel management institute in Uttarakhand. The growth of the hospitality industry has raised employment opportunities with career advancement in a number of areas, chiefly the specialised area of Hotel Management. To work within this sector you will need excellent interpersonal skills and a sharp understanding of marketing and public relations. Working in the hospitality industry is all about giving people a truly memorable experience. Running a great restaurant, maintaining a beautiful hotel or putting on the best club nights makes for a rewarding and challenging career. </p>
+          <p>In SIHM various courses are designed to give you a great head-start in your career; it is accredited by the Institute of Hospitality and you’ll enjoy placements and guest lectures held with industry leaders across the capital. </p>
           <ul class="about-list">
-            <li><i class="fa fa-book"></i>Student Support</li>
-            <li><i class="fa fa-book"></i>Scholarships</li>
-            <li><i class="fa fa-book"></i>Long Term Courses</li>
-            <li><i class="fa fa-book"></i>Short Term Courses</li>
-            <li><i class="fa fa-book"></i>Class Schedules</li>
-            <li><i class="fa fa-book"></i>Student Placement</li>
+            <li><i class="fa fa-book"></i>1 year advanced diploma in HM</li>
+            <li><i class="fa fa-book"></i>6 months certificate course in HM</li>
+            <li><i class="fa fa-book"></i>6 months course in bartending</li>
           </ul>
           <ul class="about-list">
-            <li><i class="fa fa-book"></i>Student Support</li>
-            <li><i class="fa fa-book"></i>Scholarships</li>
-            <li><i class="fa fa-book"></i>Long Term Courses</li>
-            <li><i class="fa fa-book"></i>Short Term Courses</li>
-            <li><i class="fa fa-book"></i>Class Schedules</li>
-            <li><i class="fa fa-book"></i>Student Placement</li>
+            <li><i class="fa fa-book"></i>Hostel Facility</li>
+            <li><i class="fa fa-book"></i>Campus in Dehradun</li>
+            <li><i class="fa fa-book"></i>Training in 5 Star Hotels</li>
           </ul>
         </div>
         <div class="col-md-5">
@@ -253,34 +247,34 @@
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>Our Services</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <span>nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span></p>
+        <h2>Programs</h2>
+        <p>Students looking for career opportunities in Hotel Management in Uttrakhand after clearing 12th Examination (10+2 Courses) can look forward for a rewarding Career Opportunity in Hotel Management at Saklani Institute of Hotel Management (SIHM).</span></p>
         <span class="line"></span> </div>
     </div>
     <div class="row">
       <div class="service-callouts">
         <div class="col-sm-4">
-          <div class="single-service-box"> <i class="lnr lnr-laptop-phone"></i>
+          <div class="single-service-box"> <i class="lnr lnr-graduation-hat"></i>
             <div class="clearfix"></div>
-            <h4>Fully Responsive</h4>
-            <p>Lorem ipsum ipsum ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+            <h4>1 Year Advanced Diploma in HM</h4>
+            <p>1 year course includes 6 months theory classes and 6 months Industrial training.</p>
           </div>
         </div>
         <div class="col-sm-4">
-          <div class="single-service-box"> <i class="lnr lnr-pencil"></i>
+          <div class="single-service-box"> <i class="lnr lnr-graduation-hat"></i>
             <div class="clearfix"></div>
-            <h4>Clean Design</h4>
-            <p>Lorem ipsum ipsum ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+            <h4>6 months Certificate Course in HM</h4>
+            <p>6 months course includes 3 months theory classes and 3 months Industrial training.</p>
           </div>
         </div>
         <div class="col-sm-4">
-          <div class="single-service-box"> <i class="lnr lnr-eye"></i>
+          <div class="single-service-box"> <i class="lnr lnr-graduation-hat"></i>
             <div class="clearfix"></div>
-            <h4>Retina Ready</h4>
-            <p>Lorem ipsum ipsum ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+            <h4>6 months Course in Bartending</h4>
+            <p>6 months course in bartending includes mixology of all types of beverages.</p>
           </div>
         </div>
-        <div class="col-sm-4">
+<!--         <div class="col-sm-4">
           <div class="single-service-box"> <i class="lnr lnr-graduation-hat"></i>
             <div class="clearfix"></div>
             <h4>Graduation</h4>
@@ -300,14 +294,15 @@
             <h4>Marketing</h4>
             <p>Lorem ipsum ipsum ipsum dolor sit amet, adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
 </section>
 <!-- Services End --> 
 <!-- Our counters -->
-<div class="counters">
+
+<!-- <div class="counters">
   <div class="container">
     <div class="row">
       <div class="col-sm-3">
@@ -340,10 +335,12 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
 <!-- Our counters End --> 
 <!-- Our Team Start -->
-<section id="ourteam" class="ourteam">
+
+<!-- <section id="ourteam" class="ourteam">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -386,10 +383,12 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
+
 <!-- Our Team End --> 
 <!-- Testimonials Wrapper Start -->
-<section id="testimonial" class="testimonials">
+
+<!-- <section id="testimonial" class="testimonials">
   <div class="container">
     <div class="section-title">
       <h2>Client Testimonials</h2>
@@ -452,15 +451,16 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
+
 <!-- Testimonials Wrapper End --> 
 <!-- Portfolio Start -->
 <section id="portfolio" class="portfolio">
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>Our Portfolio</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy <span>nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</span></p>
+        <h2>Galary</h2>
+        <p>These images are used to show the overview of the courses we provide. We do not own any of these photos. please note that all images and copyrights belong to their original owners.</span></p>
         <span class="line"></span> </div>
     </div>
   </div>
@@ -470,50 +470,48 @@
       <div class="col-sm-12">
         <ul class="portfolio-filter">
           <li class="filter active" data-filter="*">All</li>
-          <li class="filter" data-filter=".wordpress">Wordpress</li>
-          <li class="filter" data-filter=".jquery">jQuery</li>
-          <li class="filter" data-filter=".php">PHP</li>
-          <li class="filter" data-filter=".css">CSS</li>
-          <li class="filter" data-filter=".html">HTML</li>
+          <li class="filter" data-filter=".fbs">Food and Beverage Service</li>
+          <li class="filter" data-filter=".fpk">Food Production Kitchen</li>
+          <li class="filter" data-filter=".bar">Bartending</li>
         </ul>
         <!-- /Portfolio Filters --> 
         <!-- Portfolio Wrap -->
         <div class="row portfolio-container"> 
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work php"> <a href="#work_id-1"> <img src="images/gallery-img1.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work fpk"> <a href="#work_id-1"> <img src="images/gallery-img1.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
-                <h2>Project Title</h2>
-                <p>Catagory / Design</p>
+                <h2>Bartending</h2>
+                <p>6 months course</p>
                 <i class="fa fa-search"></i> </div>
             </div>
             </a>
             <div id="work_id-1" class="mfp-hide work-popup"> <img src="images/gallery-img1.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work wordpress"> <a href="#work_id-2"> <img src="images/gallery-img2.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work fbs"> <a href="#work_id-2"> <img src="images/gallery-img2.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
-                <h2>Project Title</h2>
-                <p>Catagory / Design</p>
+                <h2>Food and Beverage Service</h2>
+                <p>1 year diploma</p>
                 <i class="fa fa-search"></i> </div>
             </div>
             </a>
             <div id="work_id-2" class="mfp-hide work-popup"> <img src="images/gallery-img2.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work jquery"> <a href="#work_id-3"> <img src="images/gallery-img3.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work bar"> <a href="#work_id-3"> <img src="images/gallery-img3.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
-                <h2>Project Title</h2>
-                <p>Catagory / Design</p>
+                <h2>Food Production Kitchen</h2>
+                <p>1 year diploma</p>
                 <i class="fa fa-search"></i> </div>
             </div>
             </a>
             <div id="work_id-3" class="mfp-hide work-popup"> <img src="images/gallery-img3.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work php"> <a href="#work_id-4"> <img src="images/gallery-img4.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work fpk"> <a href="#work_id-4"> <img src="images/gallery-img4.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
                 <h2>Project Title</h2>
@@ -524,7 +522,7 @@
             <div id="work_id-4" class="mfp-hide work-popup"> <img src="images/gallery-img4.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work css"> <a href="#work_id-5"> <img src="images/gallery-img5.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work fbs"> <a href="#work_id-5"> <img src="images/gallery-img5.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
                 <h2>Project Title</h2>
@@ -535,7 +533,7 @@
             <div id="work_id-5" class="mfp-hide work-popup"> <img src="images/gallery-img5.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work html"> <a href="#work_id-6"> <img src="images/gallery-img6.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work bar"> <a href="#work_id-6"> <img src="images/gallery-img6.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
                 <h2>Project Title</h2>
@@ -546,7 +544,7 @@
             <div id="work_id-6" class="mfp-hide work-popup"> <img src="images/gallery-img6.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work php"> <a href="#work_id-7"> <img src="images/gallery-img6.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work fpk"> <a href="#work_id-7"> <img src="images/gallery-img7.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
                 <h2>Project Title</h2>
@@ -554,10 +552,10 @@
                 <i class="fa fa-search"></i> </div>
             </div>
             </a>
-            <div id="work_id-7" class="mfp-hide work-popup"> <img src="images/gallery-img1.jpg" alt=""> </div>
+            <div id="work_id-7" class="mfp-hide work-popup"> <img src="images/gallery-img7.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work wordpress"> <a href="#work_id-8"> <img src="images/gallery-img1.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work fbs"> <a href="#work_id-8"> <img src="images/gallery-img8.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
                 <h2>Project Title</h2>
@@ -565,10 +563,10 @@
                 <i class="fa fa-search"></i> </div>
             </div>
             </a>
-            <div id="work_id-8" class="mfp-hide work-popup"> <img src="images/gallery-img1.jpg" alt=""> </div>
+            <div id="work_id-8" class="mfp-hide work-popup"> <img src="images/gallery-img8.jpg" alt=""> </div>
           </div>
           <!-- single portfolio -->
-          <div class="col-md-4 col-sm-6 col-xs-12 work html"> <a href="#work_id-9"> <img src="images/gallery-img9.jpg" alt="">
+          <div class="col-md-4 col-sm-6 col-xs-12 work bar"> <a href="#work_id-9"> <img src="images/gallery-img9.jpg" alt="">
             <div class="work-inner">
               <div class="work-info">
                 <h2>Project Title</h2>
@@ -586,7 +584,8 @@
 </section>
 <!-- Portfolio End --> 
 <!-- Our Blog -->
-<section class="blog-wrapper">
+
+<!-- <section class="blog-wrapper">
   <div class="container">
     <div class="row">
       <div class="section-title">
@@ -594,7 +593,6 @@
       </div>
     </div>
     <div class="row"> 
-      <!-- Start Single Blog Post -->
       <div class="col-md-4 col-sm-6">
         <div class="single-blog-post">
           <div class="single-blog-thumb"> <img src="images/blog1.jpg" alt="" class="img-responsive"> </div>
@@ -608,8 +606,6 @@
             <a class="blog-btn" href="single-blog.html">read more</a> </div>
         </div>
       </div>
-      <!-- End Single Blog Post --> 
-      <!-- Start Single Blog Post -->
       <div class="col-md-4 col-sm-6">
         <div class="single-blog-post">
           <div class="single-blog-thumb"> <img src="images/blog2.jpg" alt="" class="img-responsive"> </div>
@@ -623,8 +619,6 @@
             <a class="blog-btn" href="single-blog.html">read more</a> </div>
         </div>
       </div>
-      <!-- End Single Blog Post --> 
-      <!-- Start Single Blog Post -->
       <div class="col-md-4 col-sm-6">
         <div class="single-blog-post">
           <div class="single-blog-thumb"> <img src="images/blog3.jpg" alt="" class="img-responsive"> </div>
@@ -638,9 +632,10 @@
             <a class="blog-btn" href="single-blog.html">read more</a> </div>
         </div>
       </div>
-      <!-- End Single Blog Post --> </div>
+    </div>
   </div>
-</section>
+</section> -->
+
 <!-- Our Blog End --> 
 <!-- Contact Us Start -->
 <section id="contactus" class="contactus">
