--- a/index.html
+++ b/index.html
@@ -695,7 +695,10 @@
   <!-- Google Map Start -->
   <div class="google-map">
   <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.572602452604!2d78.06024821496537!3d30.33467258177769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390929cd770304f5%3A0xf3ea9a1710729f20!2sDL%20Rd%2C%20Chironwali%2C%20Dehradun%2C%20Uttarakhand%20248001!5e0!3m2!1sen!2sin!4v1634645254222!5m2!1sen!2sin" allowfullscreen></iframe> -->
-   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.571392624854!2d78.06128831496532!3d30.334706981777643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3796d8480440ac68!2zMzDCsDIwJzA1LjAiTiA3OMKwMDMnNDguNSJF!5e0!3m2!1sen!2sin!4v1646743071859!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d860.89571599007!2d78.06352950370481!3d30.334380806704093!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3b7a7f45c6eeca28!2sSaklani%20Institute%20Of%20Hotel%20Management!5e0!3m2!1sen!2sin!4v1647356285700!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+
+<!--    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3443.571392624854!2d78.06128831496532!3d30.334706981777643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3796d8480440ac68!2zMzDCsDIwJzA1LjAiTiA3OMKwMDMnNDguNSJF!5e0!3m2!1sen!2sin!4v1646743071859!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe> -->
   </div>
   <!-- Google Map end --> 
 </section>
