--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
           <div class="col-md-4 col-sm-4">
             <div class="single-contact"> <i class="lnr lnr-map-marker"></i>
               <h4>Address</h4>
-              <p>174, Ambedkar Marg, D.L. Road, Dehradun, Uttarakhand - 248001</p>
+              <p>174, DL Rd, Kandholi, Chironwali, Dehradun, Uttarakhand 248001</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-4">
